# services/evaluation/internal/handler/handler.go
@@ -8,6 +8,7 @@ import (
 	"io"
 	"log"
 	"net/http"
+	"os"
 	"path/filepath"
 	"strconv"
 	"strings"
@@ -165,14 +166,52 @@ func (h *Handler) UploadFile(w http.ResponseWriter, r *http.Request) {
 	}
 
 	json.NewEncoder(w).Encode(&m.UploadAttachResponse{File: fileName})
-	// var Headers = map[string]string{
-	// 	"Access-Control-Allow-Origin":      "http://127.0.0.1:8001",
-	// 	"Access-Control-Allow-Credentials": "true",
-	// 	"Access-Control-Allow-Headers":     "Origin, Content-Type, accept, csrf",
-	// 	"Access-Control-Allow-Methods":     "GET, POST, PUT, DELETE, OPTIONS",
-	// 	"Content-Type":                     "application/json",
+}
+
+// SendFile godoc
+// @Summary Send file
+// @Description Send file
+// @ID sendFile
+// @Accept  json
+// @Produce  octet-stream
+// @Success 200 {file} file "File attachment"
+// @Failure 400 {object} Error "bad request"
+// @Failure 500 {object} Error "internal Server Error - Request is valid but operation failed at server side"
+// @Router /file [get]
+func (h *Handler) SendFile(w http.ResponseWriter, r *http.Request) {
+	// Разрешить CORS для всех источников (для разработки)
+	w.Header().Set("Access-Control-Allow-Origin", "*")
+	w.Header().Set("Access-Control-Allow-Methods", "POST, GET, OPTIONS")
+	w.Header().Set("Access-Control-Allow-Headers", "Content-Type")
+
+	// Обработка preflight-запроса
+	if r.Method == http.MethodOptions {
+		w.WriteHeader(http.StatusOK)
+		return
+	}
+	dir, err := os.Getwd()
+	if err != nil {
+		returnErrorJSON(w, m.StacktraceError(errors.New("invalid file location"), m.ErrServerError500))
+	}
+	filename := "aed85cd5-53d7-4eb6-a106-4deee07ed2a1.xlsx"
+	filePath := dir + "/" + filename
+	//filepath = ""
+	log.Println(filePath)
+	// // Проверяем существование файла
+	// if _, err := os.Stat(filePath); os.IsNotExist(err) {
+	// 	http.Error(w, "File not found", http.StatusNotFound)
+	// 	return
 	// }
-	//w.Header().Set("Access-Control-Allow-Origin", "http://127.0.0.1:5000")
+
+	// // Получаем имя файла из пути
+	// _, fileName := filepath.Split(filePath)
+
+	json.NewEncoder(w).Encode(&m.Response{Body: filePath})
+	w.Header().Set("Content-Type", "application/octet-stream")
+	w.Header().Set("Content-Disposition", "attachment; filename="+filename)
+	w.Header().Set("Content-Transfer-Encoding", "binary")
+	w.Header().Set("Expires", "0")
+	http.ServeFile(w, r, filePath)
 }
 
 // HandleProjects обрабатывает запросы к /api/projects
